Mass Update - Header and Cover

--- a/about.html
+++ b/about.html
@@ -17,4 +17,6 @@ header-pic: sandboa.jpg
   <li><a href="https://fontawesome.com">Font Awesome</a> - icon set</li>
   <li><a href="http://plugins.imdanishiqbal.com/sticky-header">Sticky Header</a> - jQuery sticky header</li>
   <li>Hosted on <a href="https://github.com">Github</a></li>
+  <li>Cover Photo:<a href="https://flic.kr/p/e1oHP5">Biodiversity Heritage Library</a></li>
+  <li>Contact Photo:<a href="https://flic.kr/p/e1oEjb">Biodiversity Heritage Library</a></li>
 </ul>
