Mass Update - Front Page 2.0

--- a/about.html
+++ b/about.html
@@ -2,14 +2,20 @@
 layout: page
 title: About
 permalink: /about/
-header-pic: sandboa.jpg
+header-pic: columbus_zoo.jpg
 ---
 
-<p>I'm currently a Zoo Interpreter with Columbus Zoo and Aquarium where I get to hold snakes and pet sea stars every day. In between hanging out with kangaroos and manatees, I help others tell their stories. Before living in Ohio I studied anthropology at the University of Missouri where I was the lead designer and programmer for Visualizing Abolition. This fall I will be going back to school to pursue a Masters in Library and Information Science at an as of yet undisclosed location.</p>
-
-<p style="text-align: center;">You can find examples of my work at:<br><a href="https://www.upwork.com/o/profiles/users/_~0117e23a4b9ec6c73c/">Upwork</a> / <a href="https://github.com/krogersst">Github</a> / <a href="">Portfolio</a></p>
-
-<p>If you're interested in having your story told through thoughtful web design, thoroughly researched articles, and engaging web content feel free to <a href="{{ site.baseurl }}/contact/">contact me</a>.</p>
+<p>Hi all! I’m Kelsey Rogers. I’m originally from the Missouri Ozarks, but for the past few years I've made Ohio my home. Right now I'm in Cleveland where I live with my girlfriend and our rambunctious rescue kitty Goose.
+</p>
+<p>
+I graduated from the University of Missouri in 2017 with a B.A. in anthropology. During undergrad, I was lucky enough to be a part of Visualizing Abolition as their lead web designer and programmer. I had to teach myself how to design and code a website as well as create an interactive database including visualizations in under two semesters. The result is visualizingabolition.org and a love for digital humanities.
+</p>
+<p>
+My background gets a little wacky after that with a naturalist internship at Aullwood Audubon Nature Center, a summer as an interpreter at the Columbus Zoo, and most recently a year with the Local History and Genealogy Department at the Kenton County Public Library. Right now I'm starting my second year of my MLIS degree with a focus on digital LAMs (Libraries, Archives, and Museums) with Kent State.
+</p>
+<p>
+For my full resume <a href="{{ site.baseurl }}/resume">click here</a>!
+</p>
 
 <div class="page-small-header">Site Sources</div>
 <ul>
@@ -17,6 +23,6 @@ header-pic: sandboa.jpg
   <li><a href="https://fontawesome.com">Font Awesome</a> - icon set</li>
   <li><a href="http://plugins.imdanishiqbal.com/sticky-header">Sticky Header</a> - jQuery sticky header</li>
   <li>Hosted on <a href="https://github.com">Github</a></li>
-  <li>Cover Photo:<a href="https://flic.kr/p/e1oHP5">Biodiversity Heritage Library</a></li>
-  <li>Contact Photo:<a href="https://flic.kr/p/e1oEjb">Biodiversity Heritage Library</a></li>
+  <li>Cover Photo: Toadstools, mushrooms, fungi, edible and poisonous. Indianapolis, The Bowen-Merrill Company [c1902]. Plate XLIV (Illustration). <a href="https://flic.kr/p/e1oHP5">Biodiversity Heritage Library</a></li>
+  <!--<li>Contact Photo: Toadstools, mushrooms, fungi, edible and poisonous. Indianapolis, The Bowen-Merrill Company [c1902]. Plate VI (Illustration). <a href="https://flic.kr/p/e1oEjb">Biodiversity Heritage Library</a></li>-->
 </ul>
