Mass Update - Front Page, Resume, About

--- a/about.html
+++ b/about.html
@@ -8,10 +8,10 @@ header-pic: columbus_zoo.jpg
 <p>Hi all! I’m Kelsey Rogers. I’m originally from the Missouri Ozarks, but for the past few years I've made Ohio my home. Right now I'm in Cleveland where I live with my girlfriend and our rambunctious rescue kitty Goose.
 </p>
 <p>
-I graduated from the University of Missouri in 2017 with a B.A. in anthropology. During undergrad, I was lucky enough to be a part of Visualizing Abolition as their lead web designer and programmer. I had to teach myself how to design and code a website as well as create an interactive database including visualizations in under two semesters. The result is visualizingabolition.org and a love for digital humanities.
+I graduated from the University of Missouri in 2017 with a B.A. in anthropology. During undergrad, I was lucky enough to be a part of Visualizing Abolition as their lead web designer and programmer. I had to teach myself how to design and code a website as well as create an interactive database including visualizations in under two semesters. The result is <a href="http://visualizingabolition.org">visualizingabolition.org</a> and a love for digital humanities.
 </p>
 <p>
-My background gets a little wacky after that with a naturalist internship at Aullwood Audubon Nature Center, a summer as an interpreter at the Columbus Zoo, and most recently a year with the Local History and Genealogy Department at the Kenton County Public Library. Right now I'm starting my second year of my MLIS degree with a focus on digital LAMs (Libraries, Archives, and Museums) with Kent State.
+My background gets a little wacky after that with a naturalist internship at Aullwood Audubon Nature Center, a summer as an interpreter at the Columbus Zoo, and most recently a year with the Local History and Genealogy Department at the Kenton County Public Library. Right now I'm interning with the <a href="http://iwasm.org">International Women's Air & Space Museum</a>. I'm also in my second year of my MLIS degree with a focus on digital LAMs (Libraries, Archives, and Museums) with Kent State.
 </p>
 <p>
 For my full resume <a href="{{ site.baseurl }}/resume">click here</a>!
