--- a/mlis/spadefoot/thetoad.html
+++ b/mlis/spadefoot/thetoad.html
@@ -3,19 +3,25 @@ layout: toad
 title: the eastern spadefoot
 permalink: /mlis/spadefoot/thetoad
 ---
+<div class="toad-para">
+<p>The eastern spadefoot is so named because of the spades on its hind feet that it uses to dig burrows. It lives most of its life in these burrows, only coming out at night to feed, and in the case of heavy rains, to breed. The appearance of temporary pools after heavy rains brings the toads out of hiding, the best time to get a glimpse of these shy toads. They hatch and metamorph relatively quickly to take advantage of the fleeting pools, often only taking two days to hatch once eggs are laid and then taking between 2 to 8 weeks to reach their adult form.</p>
+
+<p>Read more at <a href="https://oepos.ca.uky.edu/content/eastern-spadefoot-toad">University of Kentucky - Eastern Spadefoot Toad</a> and explore recent observations of the toad on <a href="https://www.inaturalist.org/taxa/26695-Scaphiopus-holbrookii">iNaturalist</a>.</p>
+</div>
+
 <div id="spadefoot-thetoad">
 <div class="spadefoot-iNat">
-  <img src="{{ '/mlis/spadefoot/images/observation_front.jpg' | relative_url }}">
-  <img src="{{ '/mlis/spadefoot/images/observation_foot.jpg' | relative_url }}">
-  <p><a href="https://www.inaturalist.org/observations/7620736">iNaturalist observation</a> by <a href="https://www.inaturalist.org/people/kueda">kueda</a></p>
-</div>
-<div class="spadefoot-article">
-  <p>The eastern spadefoot is so named because of the spades on its hind feet that it uses to dig burrows. It lives most of its life in these burrows, only coming out at night to feed, and in the case of heavy rains, to breed. The appearance of temporary pools after heavy rains brings the toads out of hiding, the best time to get a glimpse of these shy toads. They hatch and metamorph relatively quickly to take advantage of the fleeting pools, often only taking two days to hatch once eggs are laid and then taking between 2 to 8 weeks to reach their adult form.</p>
-
-  <p>Read more at <a href="https://oepos.ca.uky.edu/content/eastern-spadefoot-toad">University of Kentucky - Eastern Spadefoot Toad</a></p>
-
-  <p><a href="https://www.inaturalist.org/taxa/26695-Scaphiopus-holbrookii">Explore</a> recent observations of the eastern spadefoot on iNaturalist.</p>
-  <p><a href="{{ '/mlis/spadefoot/names' | relative_url }}">Explore</a> the many names the eastern spadefoot has been called.</p>
-  <p><a href="{{ '/mlis/spadefoot/faces' | relative_url }}">Explore</a> depictions of the eastern spadefoot in natural history publications.</p>
+  <div class="iNat-col">
+    <img src="{{ '/mlis/spadefoot/images/observation_front.jpg' | relative_url }}">
+    <p><a href="https://www.inaturalist.org/observations/7620736">iNaturalist observation</a> by <a href="https://www.inaturalist.org/people/kueda">kueda</a></p>
+  </div>
+  <div class="iNat-col">
+    <img src="{{ '/mlis/spadefoot/images/observation_foot.jpg' | relative_url }}">
+    <p><a href="https://www.inaturalist.org/observations/7620736">iNaturalist observation</a> by <a href="https://www.inaturalist.org/people/kueda">kueda</a></p>
+  </div>
+  <div class="iNat-col">
+    <img src="{{ '/mlis/spadefoot/images/spadefoot_water.jpg' | relative_url }}">
+    <p><a href="https://www.inaturalist.org/observations/6343490">iNaturalist observation</a> by <a href="https://www.inaturalist.org/people/aredoubles">aredoubles</a></p>
+  </div>
 </div>
 </div>
