--- a/mlis/spadefoot/thetoad.html
+++ b/mlis/spadefoot/thetoad.html
@@ -4,7 +4,7 @@ title: the eastern spadefoot
 permalink: /mlis/spadefoot/thetoad
 ---
 <div class="toad-para">
-<p>The eastern spadefoot is so named because of the spades on its hind feet that it uses to dig burrows. It lives most of its life in these burrows, only coming out at night to feed, and in the case of heavy rains, to breed. The appearance of temporary pools after heavy rains brings the toads out of hiding, the best time to get a glimpse of these shy toads. They hatch and metamorph relatively quickly to take advantage of the fleeting pools, often only taking two days to hatch once eggs are laid and then taking between 2 to 8 weeks to reach their adult form.</p>
+<p>The eastern spadefoot is so named because of the spades on its hind feet that it uses to dig burrows. It lives most of its life in these burrows, only coming out at night to feed, and in the case of heavy rains, to breed. This behavior has inspired many of the <a href="{{ '/mlis/spadefoot/names' | relative_url }}">names</a> given to the toad over the years. The appearance of temporary pools after heavy rains brings the toads out of hiding, the best time to get a glimpse of these shy toads. They hatch and metamorph relatively quickly to take advantage of the fleeting pools, often only taking two days to hatch once eggs are laid and then taking between 2 to 8 weeks to reach their adult form.</p>
 
 <p>Read more at <a href="https://oepos.ca.uky.edu/content/eastern-spadefoot-toad">University of Kentucky - Eastern Spadefoot Toad</a> and explore recent observations of the toad on <a href="https://www.inaturalist.org/taxa/26695-Scaphiopus-holbrookii">iNaturalist</a>.</p>
 </div>
