Metadata Final Project Upload

--- a/mlis/mlis.html
+++ b/mlis/mlis.html
@@ -4,6 +4,9 @@ title: MLIS
 permalink: /mlis/
 header-pic: ria-puskas-unsplash.jpg
 ---
+<h4>Course LIS 60637 - Metadata Architecture and Implementation</h4>
+<p><strong>Course Project:</strong> <a href="{{ "/mlis/metadata/home" | relative_url }}">Secondhand CDs</a></p>
+<p><strong>Course Catalog Description:</strong> Principles and theories of metadata development in the digital environment. Main focus is given to the design and applications of metadata schemas for distinct domains and information communities, issues in metadata interoperability, vocabulary control, quality control and evaluation. Examination of international standards, activities and projects with the use of case study approach.</p>
 
 <h4>Course LIS 60635 - Cultural Heritage Informatics</h4>
 <p><strong>Course Project:</strong> <a href="{{ "/mlis/spadefoot/home" | relative_url }}">Eastern Spadefoot</a></p>
