Update About and Resume, Add MLIS to Home, Add Contact Page

--- a/about.html
+++ b/about.html
@@ -2,27 +2,26 @@
 layout: page
 title: About
 permalink: /about/
-header-pic: columbus_zoo.jpg
+header-pic: kelsey1.jpg
 ---
 
-<p>Hi all! I’m Kelsey Rogers. I’m originally from the Missouri Ozarks, but for the past few years I've made Ohio my home. Right now I'm in Cleveland where I live with my girlfriend and our rambunctious rescue kitty Goose.
-</p>
-<p>
-I graduated from the University of Missouri in 2017 with a B.A. in anthropology. During undergrad, I was lucky enough to be a part of Visualizing Abolition as their lead web designer and programmer. I had to teach myself how to design and code a website as well as create an interactive database including visualizations in under two semesters. The result is <a href="http://visualizingabolition.org">visualizingabolition.org</a> and a love for digital humanities.
-</p>
-<p>
-My background gets a little wacky after that with a naturalist internship at Aullwood Audubon Nature Center, a summer as an interpreter at the Columbus Zoo, and most recently a year with the Local History and Genealogy Department at the Kenton County Public Library. Right now I'm interning with the <a href="http://iwasm.org">International Women's Air & Space Museum</a>. I'm also in my second year of my MLIS degree with a focus on digital LAMs (Libraries, Archives, and Museums) with Kent State.
-</p>
-<p>
-For my full resume <a href="{{ site.baseurl }}/resume">click here</a>!
-</p>
+<p>Hi all! I’m Kelsey Rogers. I’m originally from the Missouri Ozarks, and went to school in a rural area. My middle school recieved a grant that gave every student access to a computer and our teachers were trained in how to utilize this new technology, and in turn, we had access to a whole new world. This early experience emphasised the power that digital access to cultural heritage resources can have. Even early 2000s cultural heritage insitutions' websites gave us inspiring and engaging access to resources we otherwise wouldn't have been exposed to.</p>
 
-<div class="page-small-header">Site Sources</div>
-<ul>
-  <li><a href="https://jekyllrb.com">Jekyll</a> - SSG</li>
-  <li><a href="https://fontawesome.com">Font Awesome</a> - icon set</li>
-  <li><a href="http://plugins.imdanishiqbal.com/sticky-header">Sticky Header</a> - jQuery sticky header</li>
-  <li>Hosted on <a href="https://github.com">Github</a></li>
-  <li>Cover Photo: Toadstools, mushrooms, fungi, edible and poisonous. Indianapolis, The Bowen-Merrill Company [c1902]. Plate XLIV (Illustration). <a href="https://flic.kr/p/e1oHP5">Biodiversity Heritage Library</a></li>
-  <!--<li>Contact Photo: Toadstools, mushrooms, fungi, edible and poisonous. Indianapolis, The Bowen-Merrill Company [c1902]. Plate VI (Illustration). <a href="https://flic.kr/p/e1oEjb">Biodiversity Heritage Library</a></li>-->
-</ul>
+<p>After I graduated with a BA in Anthropology from the University of Missouri, I gained experience at a variety of cultural and natural heritage institutions across Ohio, I'm currently interning with the <a href="http://iwasm.org">International Women's Air & Space Museum</a> where I am assisting in the restructuring and revitalization of their archives. I am in my last semester of my MLIS degree with a focus on digital LAMs (Libraries, Archives, and Museums) at Kent State and will be graduating in Spring 2020. I am currently living in the greater Cleveland area with my girlfiend and our rambunctious rescue kitty Goose.</p>
+
+<p>Today, I would love to give back to my younger self, and create the next generation of websites and projects that provide access to cultural and natural heritage resources in engaging and innovative ways. From <a href="{{ site.baseurl }}/mlis/spadefoot/home">natural history</a> to <a href="http://visualizingabolition.org">digital humanities</a>, I would love to help you bring your institution's resources to life.</p>
+
+<div id="about-links" class="spadefoot-header">
+<div class="spadefoot-links">
+  <a href="{{site.baseurl}}/contact/">contact</a>
+  <div> / </div>
+  <a href="{{ site.baseurl }}/resume">resume</a>
+  <div> / </div>
+  <a href="linkedin.com/in/kelsey-rogers-240a5b19a">linkedIn</a>
+  <div> / </div>
+  <a href="https://github.com/krogersst">github</a>
+</div>
+</div>
+
+  <!--<li>Cover Photo: Toadstools, mushrooms, fungi, edible and poisonous. Indianapolis, The Bowen-Merrill Company [c1902]. Plate XLIV (Illustration). <a href="https://flic.kr/p/e1oHP5">Biodiversity Heritage Library</a></li>
+  <li>Contact Photo: Toadstools, mushrooms, fungi, edible and poisonous. Indianapolis, The Bowen-Merrill Company [c1902]. Plate VI (Illustration). <a href="https://flic.kr/p/e1oEjb">Biodiversity Heritage Library</a></li>-->
