--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ header-pic: toadstools_n278_w1150.jpg
 ---
 
 <p>Do you have a cultural heritage project you'd like to see come to life?</p>
-<p>Send me a message, and let's talk!</p>
+<p>Send me a message and let's talk!</p>
 
 <div id="contact">
 
