--- a/mlis/mlis.html
+++ b/mlis/mlis.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: MLIS
-permalink: /mlis/
+permalink: /mlis-old/
 header-pic: ria-puskas-unsplash.jpg
 ---
 <h4>Course LIS 60637 - Metadata Architecture and Implementation</h4>
