--- a/mlis/practicum/worklog.html
+++ b/mlis/practicum/worklog.html
@@ -6,6 +6,9 @@ permalink: /mlis/practicum/worklog
 header-pic: rhodes_tower.png
 header-url: https://clevelandmemory.contentdm.oclc.org/digital/collection/csu/id/460
 ---
+<h3>Work Log</h3>
+
+
 <link rel="stylesheet" type="text/css" href="{{ '/assets/styles/jquery-ui.min.css' | relative_url }}">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -412,7 +415,7 @@ $( function() {
     </ul>
 
     <h1 id="march-26-2020">March 26, 2020</h1>
-    <p><em>(120 hours)</em></p>
+    <p><em>8:00pm - 10:00pm (118 hours)</em></p>
     <ul>
       <li>At Home (Social Distancing)</li>
       <li>Roldo cont.)
@@ -421,11 +424,136 @@ $( function() {
         </ul>
       </li>
     </ul>
+
+    <h1 id="march-31-2020">March 31, 2020</h1>
+    <p><em>12:30pm - 2:30pm (120 hours)</em></p>
+    <ul>
+      <li>At Home (Social Distancing)</li>
+      <li>Roldo cont.)
+        <ul>
+          <li>Cleveland Free Times Start [30]</li>
+          <li>Only subject headers required</li>
+        </ul>
+        </li>
+    </ul>
+
     </div>
   </div>
 
   <div id="tabs-4">
     <div class="p-scroll">
+
+    <h1 id="april-01-2020">April 01, 2020</h1>
+      <p><em>10:00am - 12:00pm (122 hours)</em></p>
+      <ul>
+        <li>At Home (Social Distancing)</li>
+        <li>Check-in with Bill</li>
+        <li>Roldo cont.)
+          <ul>
+            <li>Cleveland Free Times [50]</li>
+          </ul>
+        </li>
+      </ul>
+
+    <h1 id="april-02-2020">April 02, 2020</h1>
+      <p><em>10:15am - 12:15pm (124 hours)</em></p>
+      <ul>
+        <li>At Home (Social Distancing)</li>
+        <li>Roldo cont.)
+          <ul>
+            <li>Cleveland Free Times [79]</li>
+          </ul>
+        </li>
+      </ul>
+
+    <h1 id="april-04-2020">April 04, 2020</h1>
+      <p><em>10:33am - 11:00am; 11:45 - 1:18pm (128 hours)</em></p>
+      <ul>
+        <li>At Home (Social Distancing)</li>
+        <li>Roldo cont.)
+          <ul>
+            <li>Cleveland Free Times [114]</li>
+          </ul>
+        </li>
+      </ul>
+
+    <h1 id="april-04-2020-1">April 04, 2020</h1>
+      <p><em>10:22am - 12:22pm (130 hours)</em></p>
+      <ul>
+        <li>At Home (Social Distancing)</li>
+        <li>Roldo cont.)
+          <ul>
+            <li>Cleveland Free Times [155]</li>
+          </ul>
+        </li>
+      </ul>
+
+    <h1 id="april-06-2020">April 06, 2020</h1>
+      <p><em>12:15pm - 2:15pm (132 hours)</em></p>
+      <ul>
+        <li>At Home (Social Distancing)</li>
+        <li>Roldo cont.)
+          <ul>
+            <li>Cleveland Free Times [190]</li>
+          </ul>
+        </li>
+      </ul>
+
+    <h1 id="april-08-2020">April 08, 2020</h1>
+      <p><em>7:00pm - 9:00pm (134 hours)</em></p>
+      <ul>
+        <li>At Home (Social Distancing)</li>
+        <li>Roldo cont.)
+          <ul>
+            <li>Cleveland Free Times [225]</li>
+          </ul>
+        </li>
+      </ul>
+
+    <h1 id="april-17-2020">April 17, 2020</h1>
+      <p><em>12:30pm - 2:30pm; 7:30pm - 9:30pm (138 hours)</em></p>
+      <ul>
+        <li>At Home (Social Distancing)</li>
+        <li>Roldo cont.)
+          <ul>
+            <li>Cleveland Free Times [290]</li>
+          </ul>
+        </li>
+      </ul>
+
+    <h1 id="april-18-2020">April 18, 2020</h1>
+      <p><em>12:30pm - 3:30pm (141 hours)</em></p>
+      <ul>
+        <li>At Home (Social Distancing)</li>
+        <li>Roldo cont.)
+          <ul>
+            <li>Cleveland Free Times [342]</li>
+          </ul>
+        </li>
+      </ul>
+
+  <h1 id="april-20-2020">April 20, 2020</h1>
+    <p><em>2:00pm - 4:00pm (143 hours)</em></p>
+    <ul>
+      <li>At Home (Social Distancing)</li>
+      <li>Roldo cont.)
+        <ul>
+          <li>Cleveland Free Times [376]</li>
+        </ul>
+      </li>
+    </ul>
+
+  <h1 id="april-21-2020">April 21, 2020</h1>
+    <p><em>1:00pm - 3:00pm (145 hours)</em></p>
+    <ul>
+      <li>At Home (Social Distancing)</li>
+      <li>Roldo cont.)
+        <ul>
+          <li>Cleveland Free Times [420]</li>
+        </ul>
+      </li>
+    </ul>
+
     </div>
   </div>
 
