Practicum Update & Spellcheck

--- a/mlis/portfolio/projects.html
+++ b/mlis/portfolio/projects.html
@@ -27,7 +27,7 @@ header-url: https://unsplash.com/photos/OobxlWxuLaA
       <img src="{{ 'assets/images/spadefoot_portfolio.png' | relative_url }}">
       <div>
         <p><strong>Class: </strong>LIS 60635: Cultural Heritage Informatics (Fall 2019)</p>
-        <p>The culminating project for Cultural Heritage Informatics was a website showcasing a cultural heritage object utilizing a variety of visualizations and tools such as a timeline and historypin, as well as demonstrating key skills such as applying Cataloging Cultural Objects standards and using controlled vocabularies. I chose the illustration of an eastern spadefoot that was published as a hand-colored lithograph in North American herpetology by John Edwards Holbrook (1836).</p>
+        <p>The culminating project for Cultural Heritage Informatics was a website showcasing a cultural heritage object utilizing a variety of visualizations and tools such as a timeline and HistoryPin, as well as demonstrating key skills such as applying Cataloging Cultural Objects standards and using controlled vocabularies. I chose the illustration of an eastern spadefoot that was published as a hand-colored lithograph in North American herpetology by John Edwards Holbrook (1836).</p>
         <p><strong><a href="{{ 'mlis/spadefoot/home' | relative_url }}">Full Project Online</a></strong></p>
       </div>
     </div>
@@ -39,7 +39,7 @@ header-url: https://unsplash.com/photos/OobxlWxuLaA
       <img src="{{ 'assets/images/pract_project.png' | relative_url }}">
       <div>
         <p><strong>Class: </strong>LIS 60092: Master’s Internship in Library and Information Science (Spring 2020)</p>
-        <p>Kent State's culminating graduate course is designed to provide students with a supervised opportunity to apply theory, technical and practical knowledge in the professional field. My focus was in metadata and digital initiatives within an academic library's special collections. My practicum site was Cleveland State University's Michael Schwartz Libary's Special Collections where I worked on a variety of digital initiatives within the library and in partnership with other CSU departments and Cleveland area institutions.</p>
+        <p>Kent State's culminating graduate course is designed to provide students with a supervised opportunity to apply theory, technical and practical knowledge in the professional field. My focus was in metadata and digital initiatives within an academic library's special collections. My practicum site was Cleveland State University's Michael Schwartz Library's Special Collections where I worked on a variety of digital initiatives within the library and in partnership with other CSU departments and Cleveland area institutions.</p>
         <p><strong><a href="{{ 'mlis/practicum/home' | relative_url }}">Full Practicum Portfolio Online</a></strong></p>
       </div>
     </div>
@@ -99,7 +99,7 @@ header-url: https://unsplash.com/photos/OobxlWxuLaA
       <img src="{{ 'assets/images/memo_project.png' | relative_url }}">
       <div>
         <p><strong>Class: </strong>LIS 60040: Information Institutions and Professions (Spring 2019)</p>
-        <p>For this class project, I reviewed current scholarly literature to support a reccommendation for effective personnel practices in this ficitional memo to the assistant director of a library.</p>
+        <p>For this class project, I reviewed current scholarly literature to support a recommendation for effective personnel practices in this fictional memo to the assistant director of a library.</p>
         <p><strong><a href="{{ 'mlis/portfolio/downloads/BurnoutMemo_KRoger2019.pdf' | relative_url }}">Memo PDF</a></strong></p>
       </div>
     </div>
