--- a/mlis/practicum/about.html
+++ b/mlis/practicum/about.html
@@ -19,4 +19,4 @@ header-pic: guardian.png
 <p><strong>On-site Supervisor:</strong> Bill Barrow, M.A. M.L.S.</p>
 <p><em>Head of Special Collections</em></p>
 <p><em>Michael Schwartz Library, Cleveland State University</em></p>
-<p><strong>Area of Service:</strong> Metadata and Digital Iniatives</p>
+<p><strong>Area of Service:</strong> Metadata and Digital Initiatives</p>
