--- a/mlis/practicum/home.html
+++ b/mlis/practicum/home.html
@@ -6,7 +6,8 @@ header-pic: guardian_circle.png
 header-url: https://clevelandmemory.contentdm.oclc.org/digital/collection/urbanohio/id/716
 ---
 
-<p>Kent State's culminating graduate course is designed to provide students with a supervised opportunity to apply theory, technical and practical knowledge in the professional field. My focus was in metadata and digital initiatives within an academic library's special collections. My practicum site was Cleveland State University's Michael Schwartz Libary's Special Collections where I worked on a variety of digital initatives within the library and in partnership with other CSU departments and Cleveland area institutions.</p>
+<p>Kent State's culminating graduate course is designed to provide students with a supervised opportunity to apply theory, technical and practical knowledge in the professional field. My focus was in metadata and digital initiatives within an academic library's special collections. My practicum site was Cleveland State University's Michael Schwartz Library's Special Collections where I worked on a variety of digital initiatives within the library and in partnership with other CSU departments and Cleveland area institutions.</p>
+<p>Focusing on digital libraries proved to be particularly timely as my ability to report to the physical library was interrupted in early March due to COVID-19. I was lucky enough to be able to continue work on the <a href="{{ 'mlis/practicum/projects#Roldo-CM' | relative_url }}">Roldo Bartimole newspaper clippings</a> metadata project for <a href="https://clevelandmemory.org">Cleveland Memory</a> enabling me to complete my 150 hours and continue to contribute to the work of Cleveland State University libraries.</p>
 
 <div class="p-info">
   <div class="p-box p-about">
