--- a/mlis/practicum/projects.html
+++ b/mlis/practicum/projects.html
@@ -8,46 +8,37 @@ header-pic: canadiana_project.png
 <h3>Projects</h3>
 
   <div class="p-project">
-    <h4>Cleveland Memory - ContentDM</h4>
+    <h4 id="Roldo-CM">Cleveland Memory</h4>
+    <p><a href="https://clevelandmemory.org">Cleveland Memory</a> is an interdisciplinary digital cultural heritage project featuring digitized photographs, texts, oral histories, and other resources and materials all focusing on the history of Cleveland and Northeast Ohio.</p>
     <div class="p-project-wrap">
       <img src="{{ 'assets/images/roldo_circle.png' | relative_url }}">
       <div>
-        <p>Processed and created metadata entries for over 1,000 photos for <a href="https://clevelandmemory.org">Cleveland Memory</a></p>
-        <p><em>Project Annotation TBA</em></p>
+        <p>Based on the <strong>ContentDM</strong> platform, Cleveland Memory is fully searchable, utilizing extensive metadata to ensure a smooth browsing experience using Library of Congress Authorities and the Getty Art and Architecture Thesaurus for standardization.</p>
+        <p>During my practicum, I created descriptive metadata entries for Cleveland Memory including Cleveland Press photos and my largest undertaking, the Roldo Bartimole newspaper columns collection, consisting of around 1,000 newspaper clippings. To read more about Bartimole, a powerhouse of Cleveland journalism, go to <a href="http://www.clevelandmemory.org/roldo/index.html">Roldo Bartimole: Point of View</a>.</p>
+        <p>I was also involved in supporting a metadata crowdsourcing project, putting together a Best Practices guide for volunteers to follow to ensure quality metadata submissions to the Cleveland Memory project.</p>
       </div>
     </div>
   </div>
 
   <div class="p-project">
-    <h4>Ohio Outdoor Sculpture - Omeka</h4>
-    <div class="p-project-wrap">
-      <img src="{{ 'assets/images/oos_project.png' | relative_url }}">
-      <div>
-        <p>Contributed entries to <a href="https://oos.sculpturecenter.org">Ohio Outdoor Sculpture</a>, becoming familiar with their Omeka database.</p>
-        <p><em>Project Annotation TBA</em></p>
-      </div>
-    </div>
-  </div>
-
-  <div class="p-project">
-    <h4>Cleveland Historical - S.S. Canadiana</h4>
-    <div class="p-project-wrap">
-      <img src="{{ 'assets/images/canadiana_project.png' | relative_url }}">
-      <div>
-        <p>An article written for Cleveland Historical, Center for Public History + Digital Humanities at Cleveland State University about a cruise ship that sank in the Cuyahoga River.</p>
-        <p><em>Project Annotation TBA</em></p>
-        <p><a href="https://clevelandhistorical.org/items/show/905">Full Article</a></p>
-      </div>
-    </div>
-  </div>
-  <div class="p-project">
-    <h4>Encyclopedia of Cleveland History - S.S. Canadiana</h4>
+    <h4>S.S. Canadiana Articles</h4>
     <div class="p-project-wrap">
       <img src="{{ 'assets/images/canadiana_project2.png' | relative_url }}">
       <div>
-        <p>An article written for the Encyclopedia of Cleveland History of Case Western Reserve University about a cruise ship that sank in the Cuyahoga River.</p>
-        <p><em>Project Annotation TBA</em></p>
-        <p><a href="https://case.edu/ech/articles/c/s-s-canadiana">Full Article</a></p>
+        <p>In addition to creating metadata for the Cleveland Press photos of the S.S. Canadiana for Cleveland Memory, I conducted research on the history of the cruise ship and wrote two articles tailored to the particular needs of two public history projects.</p>
+        <p>The <a href="https://case.edu/ech/articles/c/s-s-canadiana">first article</a> was an entry for the Encyclopedia of Cleveland History of Case Western Reserve University. This project emphasizes clean, accessible, and fact-forward entries on the history of Cleveland.</p>
+        <p>The <a href="https://clevelandhistorical.org/items/show/905">second article</a> was written for Cleveland Historical, a project of the Center for Public History + Digital Humanities at Cleveland State University. This project encourages engaging, dynamic content about specific locations in Cleveland. This allowed for me to really dive into the crazy stories surrounding the S.S. Canadiana and the events that lead to it sinking near Collision Bend in the Cuyahoga River.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="p-project">
+    <h4>Ohio Outdoor Sculpture</h4>
+    <div class="p-project-wrap">
+      <img src="{{ 'assets/images/oos_project.png' | relative_url }}">
+      <div>
+        <p>Born out of the Save Outdoor Sculpture! project in the 1990s, a <a href="www.heritagepreservation.org">Heritage Preservation</a>project, <a href="https://oos.sculpturecenter.org">Ohio Outdoor Sculpture</a> (OOS) is a database of over 1,400 publicly accessible outdoor sculptures. with images, historical data and condition information provided through <strong>Omeka</strong>. To read more visit: <a href="http://oos.sculpturecenter.org/about">About OOS</a>.</p>
+        <p>As part of my practicum, I researched counties not yet represented by OOS and contributed several entries to to the database to help round out their coverage of Ohio sculptures.</p>
       </div>
     </div>
   </div>
@@ -57,8 +48,7 @@ header-pic: canadiana_project.png
     <div class="p-project-wrap">
       <img src="{{ 'assets/images/map_project.png' | relative_url }}">
       <div>
-        <p>Created content for and updated Special Collections' online <a href="https://researchguides.csuohio.edu/localhistory">local history research guide</a> on the LibGuides platform, transferring valuable content from old Cleveland Digital Library format to research guide with high traffic.</p>
-        <p><em>Project Annotation TBA</em></p>
+        <p>My first project with Special Collections was to create content for and update the department's online <a href="https://researchguides.csuohio.edu/localhistory">local history research guide</a> on the LibGuides platform. This involved transferring valuable content from the old Cleveland Digital Library format to a research guide with high traffic. This enabled me to understand the ins and outs of LibGuides and help support public history researchers.</p>
       </div>
     </div>
   </div>
@@ -68,8 +58,7 @@ header-pic: canadiana_project.png
     <div class="p-project-wrap">
       <img src="{{ 'assets/images/local_project.png' | relative_url }}">
       <div>
-        <p>Conservation and collection care, including rehousing of paintings and prints in Special Collections and attending a conservation demo for treating and rehousing curled and folded photographs and documents.</p>
-        <p><em>Project Annotation TBA</em></p>
+        <p>In addition to the digital side of special collections, I was able to assist in conservation and collection care. This included rehousing of paintings and prints as well as the opportunity to attend a conservation demonstration for treating and rehousing curled and folded photographs and documents.</p>
       </div>
     </div>
   </div>
