--- a/mlis/portfolio/coursework.html
+++ b/mlis/portfolio/coursework.html
@@ -121,7 +121,7 @@ $( function() {
     <p>LIS 60092: <strong>Master’s Internship in Library and Information Science</strong></p>
     <ul>
       <li>3 credit hours</li>
-      <li>Kent State's culminating graduate course is designed to provide students with a supervised opportunity to apply theory, technical and practical knowledge in the professional field. My focus was in metadata and digital initiatives within an academic library's special collections. My practicum site was Cleveland State University's Michael Schwartz Libary's Special Collections where I worked on a variety of digital initatives within the library and in partnership with other CSU departments and Cleveland area institutions.</li>
+      <li>Kent State's culminating graduate course is designed to provide students with a supervised opportunity to apply theory, technical and practical knowledge in the professional field. My focus was in metadata and digital initiatives within an academic library's special collections. My practicum site was Cleveland State University's Michael Schwartz Library's Special Collections where I worked on a variety of digital initiatives within the library and in partnership with other CSU departments and Cleveland area institutions.</li>
       <li><strong>Featured Class Project: </strong><a href="{{ 'mlis/practicum/home' | relative_url }}">Digitial Special Collections Practicum</a></li>
     </ul>
 
