Practicum Update - Class Submission

--- a/mlis/portfolio/projects.html
+++ b/mlis/portfolio/projects.html
@@ -27,7 +27,7 @@ header-url: https://unsplash.com/photos/OobxlWxuLaA
       <img src="{{ 'assets/images/spadefoot_portfolio.png' | relative_url }}">
       <div>
         <p><strong>Class: </strong>LIS 60635: Cultural Heritage Informatics (Fall 2019)</p>
-        <p>The culminating project for Cultural Heritage Informatics was a website showcasing a cultural heritage object utilizing a variety of visualizations and tools such as a timeline and HistoryPin, as well as demonstrating key skills such as applying Cataloging Cultural Objects standards and using controlled vocabularies. I chose the illustration of an eastern spadefoot that was published as a hand-colored lithograph in North American herpetology by John Edwards Holbrook (1836).</p>
+        <p>The culminating project for Cultural Heritage Informatics was a website showcasing a cultural heritage object utilizing a variety of visualizations and tools such as a timeline and HistoryPin, as well as demonstrating key skills such as applying Cataloging Cultural Objects standards and using controlled vocabularies. I chose one of my favorite illustrations to explore: a naturalistic study of an eastern spadefoot that was published as a hand-colored lithograph in North American herpetology by John Edwards Holbrook (1836).</p>
         <p><strong><a href="{{ 'mlis/spadefoot/home' | relative_url }}">Full Project Online</a></strong></p>
       </div>
     </div>
@@ -39,7 +39,8 @@ header-url: https://unsplash.com/photos/OobxlWxuLaA
       <img src="{{ 'assets/images/pract_project.png' | relative_url }}">
       <div>
         <p><strong>Class: </strong>LIS 60092: Master’s Internship in Library and Information Science (Spring 2020)</p>
-        <p>Kent State's culminating graduate course is designed to provide students with a supervised opportunity to apply theory, technical and practical knowledge in the professional field. My focus was in metadata and digital initiatives within an academic library's special collections. My practicum site was Cleveland State University's Michael Schwartz Library's Special Collections where I worked on a variety of digital initiatives within the library and in partnership with other CSU departments and Cleveland area institutions.</p>
+        <p>My practicum focused on metadata and digital initiatives within an academic library's special collections. My practicum site was Cleveland State University's Michael Schwartz Library's Special Collections where I worked on a variety of digital initiatives within the library and in partnership with other CSU departments and Cleveland area institutions.</p>
+        <p>I completed three learning objectives over the course of 150 hours: 1.) Increased my familiarity with digital LAM platforms such as CONTENTdm; 2.) Gained hands-on experience with metadata and digital content workflows; 3.) Contributed content to established digital LAM projects</p>
         <p><strong><a href="{{ 'mlis/practicum/home' | relative_url }}">Full Practicum Portfolio Online</a></strong></p>
       </div>
     </div>
@@ -75,7 +76,7 @@ header-url: https://unsplash.com/photos/OobxlWxuLaA
       <img src="{{ 'assets/images/assess_project.png' | relative_url }}">
       <div>
         <p><strong>Class: </strong>LIS 60030: People in the Information Ecology (Fall 2018)</p>
-        <p>This course project focused on analysis and assessment of a particular user group. I synthesized current research on information behaviors and needs of museum website users in order to identify actionable recommendations for more effective museum website design.</p>
+        <p>This course project focused on analysis and assessment of a particular user group. I synthesized current research on information behaviors and needs of museum website users in order to identify actionable recommendations for more effective museum website design. My main takeaway was the importance of providing users with multiple services and modes of interaction with the museum's online collection.</p>
         <p><strong><a href="{{ 'mlis/portfolio/downloads/NeedsAssesment_KRogers2018.pdf' | relative_url }}">Needs Assessment PDF</a></strong></p>
       </div>
     </div>
@@ -88,6 +89,7 @@ header-url: https://unsplash.com/photos/OobxlWxuLaA
       <div>
         <p><strong>Class: </strong>LIS 60700: Foundations of Museum Studies (Spring 2020)</p>
         <p>This culminating project takes an in-depth look into a local museum we hadn’t previously visited. This biography focuses on the museum’s services and internal system to evaluate and assess its effectiveness within the community and its wider environment.</p>
+        <p>I chose the Great Lakes Science Center, a nonprofit focused on STEM learning in Cleveland. I analyzed their recent shift towards improving their finances and expanding their programming through reviewing their recent audits, making several tours of the facilities, and an interview with their Communications Director.</p>
         <p><strong><a href="https://video.kent.edu/media/Great+Lakes+Science+Center/1_ncpbz79u">Museum Biography Video (15:37)</a></strong></p>
       </div>
     </div>
@@ -100,6 +102,7 @@ header-url: https://unsplash.com/photos/OobxlWxuLaA
       <div>
         <p><strong>Class: </strong>LIS 60040: Information Institutions and Professions (Spring 2019)</p>
         <p>For this class project, I reviewed current scholarly literature to support a recommendation for effective personnel practices in this fictional memo to the assistant director of a library.</p>
+        <p>I identified two goals for the library to strive for in order to prevent staff burnout: Reduce role ambiguity and ensure performance recognition fairness. I further outlined steps to take to achieve these two goals, providing a clear plan for implementing effective personnel practices.</p>
         <p><strong><a href="{{ 'mlis/portfolio/downloads/BurnoutMemo_KRoger2019.pdf' | relative_url }}">Memo PDF</a></strong></p>
       </div>
     </div>
