Add Assessment, Update Worklog

--- a/mlis/practicum/projects.html
+++ b/mlis/practicum/projects.html
@@ -37,14 +37,14 @@ header-pic: canadiana_project.png
     <div class="p-project-wrap">
       <img src="{{ 'assets/images/oos_project.png' | relative_url }}">
       <div>
-        <p>Born out of the Save Outdoor Sculpture! project in the 1990s, a <a href="www.heritagepreservation.org">Heritage Preservation</a>project, <a href="https://oos.sculpturecenter.org">Ohio Outdoor Sculpture</a> (OOS) is a database of over 1,400 publicly accessible outdoor sculptures. with images, historical data and condition information provided through <strong>Omeka</strong>. To read more visit: <a href="http://oos.sculpturecenter.org/about">About OOS</a>.</p>
-        <p>As part of my practicum, I researched counties not yet represented by OOS and contributed several entries to to the database to help round out their coverage of Ohio sculptures.</p>
+        <p>Born out of the Save Outdoor Sculpture! project in the 1990s, a <a href="www.heritagepreservation.org">Heritage Preservation</a> project, <a href="https://oos.sculpturecenter.org">Ohio Outdoor Sculpture</a> (OOS) is a database of over 1,400 publicly accessible outdoor sculptures. with images, historical data and condition information provided through <strong>Omeka</strong>. To read more visit: <a href="http://oos.sculpturecenter.org/about">About OOS</a>.</p>
+        <p>As part of my practicum, I researched counties not yet represented by OOS and contributed several entries to the database to help round out their coverage of Ohio sculptures.</p>
       </div>
     </div>
   </div>
 
   <div class="p-project">
-    <h4>CSU Research Guides - LibGuides</h4>
+    <h4>CSU Research Guides</h4>
     <div class="p-project-wrap">
       <img src="{{ 'assets/images/map_project.png' | relative_url }}">
       <div>
