--- a/mlis/practicum/worklog.html
+++ b/mlis/practicum/worklog.html
@@ -550,6 +550,28 @@ $( function() {
       </li>
     </ul>
 
+    <h1 id="april-27-2020">April 27, 2020</h1>
+      <p><em>8:40pm - 9:40pm (146 hours)</em></p>
+      <ul>
+        <li>At Home (Social Distancing)</li>
+        <li>Roldo cont.)
+          <ul>
+            <li>Cleveland Free Times [440]</li>
+          </ul>
+        </li>
+      </ul>
+
+      <h1 id="april-28-2020">April 28, 2020</h1>
+        <p><em>1:45pm - 2:45pm (147 hours)</em></p>
+        <ul>
+          <li>At Home (Social Distancing)</li>
+          <li>Roldo cont.)
+            <ul>
+              <li>Cleveland Free Times [460]</li>
+            </ul>
+          </li>
+        </ul>
+
     </div>
   </div>
 
