--- a/mlis/practicum/worklog.html
+++ b/mlis/practicum/worklog.html
@@ -572,6 +572,17 @@ $( function() {
           </li>
         </ul>
 
+        <h1 id="april-30-2020">April 30, 2020</h1>
+          <p><em>6:30pm - 8:30pm (150 hours)</em></p>
+          <ul>
+            <li>At Home (Social Distancing)</li>
+            <li>Roldo cont.)
+              <ul>
+                <li>Cleveland Free Times [515]</li>
+              </ul>
+            </li>
+          </ul>
+
     </div>
   </div>
 
